@@ -14,7 +14,12 @@ repository.type = git
 
 [@Classic]
 
-[Test::Perl::Critic]
+; not yet ready for Test::Perl::Critic
+;[Test::Perl::Critic]
 
 [AutoPrereqs]
+
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
 
